[package]
name = "absQra"
version = "0.1.0"
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_lexer = {path = "src/lib/ra_lexer"}
# ra_parser = {path = "src/lib/ra_parser"}
