[package]
name = "absQra"
version = "0.1.0"
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
edition = "2018"

[workspace]
members = [
    "src/lib/ra_lexer",
    "src/lib/ra_parser",
    "src/lib/ra_interactive",
    "src/lib/ra_dev_tools",
    "src/lib/ra_common"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_parser = {path = "src/lib/ra_parser"}
