[package]
name = "ra_interactive"
version = "0.1.0"
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_parser = {path = "../ra_parser"}
ra_lexer = {path = "../ra_lexer"}
scrawl = "1.1.0"
