[package]
name = "ra_lexer"
version = "0.1.0"
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
failure_derive = "0.1.8"
serde = "1.0.117"
serde_json = "1.0.59"
serde_derive = "1.0.117"

[dev-dependencies]
ra_dev_tools = {path = "../ra_dev_tools"}
