[package]
name = "ra_parser"
version = "0.1.0"
authors = ["a.nvlkv <a.nvlkv@protonmail.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ra_tree_parser = {path = "../ra_tree_parser"}
ra_lexer = {path = "../ra_lexer"}
failure = "0.1.8"
failure_derive = "0.1.8"
serde_json = "1.0.56"
serde = "1.0.114"
serde_derive = "1.0.114"


[dev-dependencies]
ra_dev_tools = {path = "../ra_dev_tools"}
