[package]
name = "ra_tree_parser"
version = "0.1.0"
authors = ["a.nvlkv <a.nvlkv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
ra_dev_tools = {path = "../ra_dev_tools"}

[dependencies]
ra_lexer = {path = "../ra_lexer"}
indextree = "4.3.1"
