[package]
name = "example_files_macro"
version = "0.1.0"
authors = ["a.nvlkv <a.nvlkv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
files_iterator = {path="../files_iterator"}
proc-macro2 = "1.0"

[lib]
proc-macro = true